Add Sorting functionality
* Sorting option is stored in DataStore
* new view model abstract class
* new visual features
